WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143627
WebKit places caret in front of pasted Numbers cells instead of behind
https://bugs.webkit.org/show_bug.cgi?id=143627
Summary
WebKit places caret in front of pasted Numbers cells instead of behind
Ryosuke Niwa
Reported
2015-04-10 20:55:59 PDT
Copy and paste a cell from Numbers, WebKit places the caret before the pasted cells. <
rdar://problem/18183611
>
Attachments
Fixes the bug
(5.04 KB, patch)
2015-04-10 21:02 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-04-10 21:02:48 PDT
Created
attachment 250560
[details]
Fixes the bug
WebKit Commit Bot
Comment 2
2015-04-11 09:04:05 PDT
Comment on
attachment 250560
[details]
Fixes the bug Clearing flags on attachment: 250560 Committed
r182656
: <
http://trac.webkit.org/changeset/182656
>
WebKit Commit Bot
Comment 3
2015-04-11 09:04:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug